# MCP-RAG-Agent

./: Chroma_DB_Generation.py  README.md  requirements.txt  server.py
chromaDB/: chroma.sqlite3
data/: data.txt
rag/: main.py  pyproject.toml  rag.py  server.py
rag/chromaDB/0c8506d2-01da-4b53-9030-bf8e6ec29679/: index_metadata.pickle
