[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "langchain==0.3.23",
    "langchain-core==0.3.51",
    "langchain-community==0.3.21",
    "llama-index==0.12.30",
    "llama-index-embeddings-huggingface==0.5.3",
    "llama-index-cli==0.4.1",
    "llama-index-core==0.12.30",
    "llama-index-vector-stores-chroma==0.4.1",
    "chromadb==0.5.23",
    "langchain-groq==0.3.1",
    "llama-index-llms-groq==0.3.1",
    "mcp==1.6.0",
    "mcp-use>=1.2.8",
    "fastembed>=0.6.1",
]
